--- a/SchVictorina.WebAPI/todo.txt
+++ b/SchVictorina.WebAPI/todo.txt
@@ -1,5 +1,18 @@
-dictionary engine
-! ..........
+В кнопки не влезают длинные названия
+
+Надо добавить lock на обработку запроса, чтобы все запросы от всех юзеров были последовательные
+
+Баг (78 + -47) * 29, то есть минус у числа должен стать минусом между числами. Тоже самое с минус минус, которые должны стать плюсом
+
+Что-то часто падает бот
+
+Одна engine кнопка должна уметь читать много excel файлов
+
+Попадаются вопрос без ответов
+
+Подарок делать поменьше размером
+
+Подарки сделать разные
 
 ==========================================
 
