buttons text limit, breakline

--- a/SchVictorina.WebAPI/todo.txt
+++ b/SchVictorina.WebAPI/todo.txt
@@ -1,6 +1,6 @@
-В кнопки не влезают длинные названия
+MaxWrongAnswerCount math engine
 
-Попадаются вопрос без ответов
+MaxWrongAnswerCount dictionary engine
 
 ==========================================
 
