--- a/SchVictorina.WebAPI/todo.txt
+++ b/SchVictorina.WebAPI/todo.txt
@@ -1,5 +1,11 @@
 после ответа на вопрос показывать справочную информацию с картинкой
 
+/user без указания юзера это инфа по мне, даже если я не админ
+
+картинка маленькая
+
+при делении в разделе огромных чисел - достаточно просто угадать, т.к. оба числа больших, а ответ всегда маленький
+
 ==========================================
 
 общее
