dictionary engine - content

--- a/SchVictorina.WebAPI/todo.txt
+++ b/SchVictorina.WebAPI/todo.txt
@@ -1,4 +1,4 @@
-после ответа на вопрос показывать справочную информацию с картинкой
+-+после ответа на вопрос показывать справочную информацию с картинкой
 
 при делении в разделе огромных чисел - достаточно просто угадать, т.к. оба числа больших, а ответ всегда маленький
 
