--- a/SchVictorina.WebAPI/todo.txt
+++ b/SchVictorina.WebAPI/todo.txt
@@ -1,6 +1,13 @@
--+после ответа на вопрос показывать справочную информацию с картинкой
+повторяются вопросы
+пояснение при непаильном ответе не содержит ответ на вопрос (например, в каком году покорили Алтай)
 
-при делении в разделе огромных чисел - достаточно просто угадать, т.к. оба числа больших, а ответ всегда маленький
+не хватает способа написать автору - свои идеи, ошибки и пр.
+
+вынести пояснение по кнопке
+расширить поснение бОльшим кол-вом текста и многими картинками (например, для Стран это не только карта мира, но и подробная карта географическая, климатическая, фото городов, флаг и герб и пр.)
+
+математика: 2*2 числа
+математика: елочки плюс шапочки
 
 ==========================================
 
