--- a/SchVictorina.WebAPI/todo.txt
+++ b/SchVictorina.WebAPI/todo.txt
@@ -1,19 +1,18 @@
-повторяются вопросы
-пояснение при непаильном ответе не содержит ответ на вопрос (например, в каком году покорили Алтай)
+- баг: лишние [1] в контенте
+- баг: повторяются вопросы
+- улучшения: писать в каждом вопросе, сколько баллов получу/потрачу, и в каждом ответе сколько у меня сейчас баллов
+- улучшения: узнать свой score по кнопке или через меню
+- улучшения: не хватает способа написать автору - свои идеи, ошибки и пр.
+- общее: вопросы без кнопок ответов
+- dictionary: вариант вопроса в виде картинки (угадай страну по фото)
+- dictionary: варианты ответа в виде картинок (цветы, грибы)
+- dictionary: пояснение по кнопке и с кучей картинок, и расширить набор картинок для географии
+- dictionary: другие предметы (xlsx)
+- math: физика (единицы измерения)
+- math: дроби (наверное, в виде картинки)
+- math: числа в таблице 2*2
+- math: ребусы (шапка плюс нитки)
 
-не хватает способа написать автору - свои идеи, ошибки и пр.
-
-вынести пояснение по кнопке
-расширить поснение бОльшим кол-вом текста и многими картинками (например, для Стран это не только карта мира, но и подробная карта географическая, климатическая, фото городов, флаг и герб и пр.)
-
-математика: 2*2 числа
-математика: елочки плюс шапочки
-
-==========================================
-
-общее
-- вопросы в виде картинок
-- ответы(кнопки) в виде картинок
 
 ==========================================
 
