dictionary engine - upgrade

--- a/SchVictorina.WebAPI/todo.txt
+++ b/SchVictorina.WebAPI/todo.txt
@@ -1,4 +1,3 @@
-- баг: лишние [1] в контенте
 - баг: повторяются вопросы
 - улучшения: писать в каждом вопросе, сколько баллов получу/потрачу, и в каждом ответе сколько у меня сейчас баллов
 - улучшения: узнать свой score по кнопке или через меню
@@ -8,6 +7,8 @@
 - dictionary: варианты ответа в виде картинок (цветы, грибы)
 - dictionary: пояснение по кнопке и с кучей картинок, и расширить набор картинок для географии
 - dictionary: другие предметы (xlsx)
+- dictionary: questionImage: гарантировать наличие картинки
+- dictionary: questionImage: рандом картинки
 - math: физика (единицы измерения)
 - math: дроби (наверное, в виде картинки)
 - math: числа в таблице 2*2
