discord be here

--- a/SchVictorina.WebAPI/todo.txt
+++ b/SchVictorina.WebAPI/todo.txt
@@ -1,4 +1,5 @@
 - баг: повторяются вопросы
+- баг: анти спам по кнопке
 - улучшения: не хватает способа написать автору - свои идеи, ошибки и пр.
 - общее: вопросы без кнопок ответов
 - dictionary: вариант вопроса в виде картинки (угадай страну по фото)
